tests/functional/lang/parse-fail-utf8.err
error: syntax error, unexpected invalid token, expecting end of file
       at «stdin»:1:5:
            1| 123 é 4
             |     ^
            2|
